--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -1,47 +1,5 @@
 [preset.0]
 
-name="Blasto X"
-platform="Windows Desktop"
-runnable=false
-custom_features=""
-export_filter="all_resources"
-include_filter=""
-exclude_filter=""
-export_path="../../../Desktop/Blasto X.exe"
-script_export_mode=1
-script_encryption_key=""
-
-[preset.0.options]
-
-custom_template/debug=""
-custom_template/release=""
-binary_format/64_bits=true
-binary_format/embed_pck=true
-texture_format/bptc=true
-texture_format/s3tc=true
-texture_format/etc=true
-texture_format/etc2=true
-texture_format/no_bptc_fallbacks=true
-codesign/enable=false
-codesign/identity_type=0
-codesign/identity=""
-codesign/password=""
-codesign/timestamp=true
-codesign/timestamp_server_url=""
-codesign/digest_algorithm=1
-codesign/description=""
-codesign/custom_options=PoolStringArray(  )
-application/icon="res://icon.ico"
-application/file_version=""
-application/product_version=""
-application/company_name="Aspera Lab Studio"
-application/product_name="Blasto X"
-application/file_description=""
-application/copyright=""
-application/trademarks=""
-
-[preset.1]
-
 name="Mac OSX"
 platform="Mac OSX"
 runnable=true
@@ -53,7 +11,7 @@ export_path=""
 script_export_mode=1
 script_encryption_key=""
 
-[preset.1.options]
+[preset.0.options]
 
 custom_template/debug=""
 custom_template/release=""
@@ -72,10 +30,35 @@ texture_format/s3tc=true
 texture_format/etc=true
 texture_format/etc2=true
 
-[preset.2]
+[preset.1]
 
 name="Linux/X11"
 platform="Linux/X11"
+runnable=true
+custom_features=""
+export_filter="all_resources"
+include_filter=""
+exclude_filter=""
+export_path=""
+script_export_mode=1
+script_encryption_key=""
+
+[preset.1.options]
+
+custom_template/debug=""
+custom_template/release=""
+binary_format/64_bits=true
+binary_format/embed_pck=false
+texture_format/bptc=true
+texture_format/s3tc=true
+texture_format/etc=true
+texture_format/etc2=true
+texture_format/no_bptc_fallbacks=true
+
+[preset.2]
+
+name="HTML5"
+platform="HTML5"
 runnable=true
 custom_features=""
 export_filter="all_resources"
@@ -89,31 +72,6 @@ script_encryption_key=""
 
 custom_template/debug=""
 custom_template/release=""
-binary_format/64_bits=true
-binary_format/embed_pck=false
-texture_format/bptc=true
-texture_format/s3tc=true
-texture_format/etc=true
-texture_format/etc2=true
-texture_format/no_bptc_fallbacks=true
-
-[preset.3]
-
-name="HTML5"
-platform="HTML5"
-runnable=true
-custom_features=""
-export_filter="all_resources"
-include_filter=""
-exclude_filter=""
-export_path=""
-script_export_mode=1
-script_encryption_key=""
-
-[preset.3.options]
-
-custom_template/debug=""
-custom_template/release=""
 variant/export_type=0
 vram_texture_compression/for_desktop=true
 vram_texture_compression/for_mobile=false
@@ -121,3 +79,45 @@ html/custom_html_shell=""
 html/head_include=""
 html/canvas_resize_policy=2
 html/experimental_virtual_keyboard=false
+
+[preset.3]
+
+name="Windows Desktop"
+platform="Windows Desktop"
+runnable=true
+custom_features=""
+export_filter="all_resources"
+include_filter=""
+exclude_filter=""
+export_path="../Blasto X.exe"
+script_export_mode=1
+script_encryption_key=""
+
+[preset.3.options]
+
+custom_template/debug=""
+custom_template/release=""
+binary_format/64_bits=true
+binary_format/embed_pck=true
+texture_format/bptc=false
+texture_format/s3tc=true
+texture_format/etc=false
+texture_format/etc2=false
+texture_format/no_bptc_fallbacks=true
+codesign/enable=false
+codesign/identity_type=0
+codesign/identity=""
+codesign/password=""
+codesign/timestamp=true
+codesign/timestamp_server_url=""
+codesign/digest_algorithm=1
+codesign/description=""
+codesign/custom_options=PoolStringArray(  )
+application/icon="res://icon.ico"
+application/file_version=""
+application/product_version=""
+application/company_name=""
+application/product_name=""
+application/file_description=""
+application/copyright=""
+application/trademarks=""
