add tiles for foreground and fix bug of missing change scene

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -89,7 +89,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../Blasto X.exe"
+export_path="../../../Desktop/Blasto X.exe"
 script_export_mode=1
 script_encryption_key=""
 
@@ -116,8 +116,8 @@ codesign/custom_options=PoolStringArray(  )
 application/icon="res://icon.ico"
 application/file_version=""
 application/product_version=""
-application/company_name=""
-application/product_name=""
+application/company_name="Aspera Lab Studio"
+application/product_name="Blasto X"
 application/file_description=""
 application/copyright=""
 application/trademarks=""
