--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 .import/
 export.cfg
 export_presets.cfg
-.import
+
 
 # Imported translations (automatically generated from CSV files)
 *.translation
@@ -14,5 +14,6 @@ export_presets.cfg
 .mono/
 data_*/
 mono_crash.*.json
-.import
-*.import
+*.ogg.import
+*.wav.import
+*.otf.import
