--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -166,7 +166,7 @@ codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PoolStringArray(  )
 application/modify_resources=true
-application/icon="res://icon.ico"
+application/icon="res://ico.ico"
 application/file_version=""
 application/product_version=""
 application/company_name="Aspera Lab Studio"
